--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             </div>
         </div>
     </div>
+    <script src="js/geo-ip-detector.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/language-manager.js"></script>
     <script src="js/native-language.js"></script>
