--- a/dialogues.html
+++ b/dialogues.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="css/language-selector.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <script>
+        // Definir a página atual para o destaque do menu
+        window.currentPage = 'dialogues.html';
+    </script>
 </head>
 <body>
     <!-- Navbar (será carregada via JavaScript) -->
