--- a/navbar.html
+++ b/navbar.html
@@ -9,31 +9,8 @@
         <a href="dialogues.html" data-translate="navDialogues">Diálogos</a>
         <a href="stories.html" data-translate="navStories">Histórias</a>
         
-        <!-- Dropdown para Flashcards -->
-        <div class="dropdown">
-            <div class="dropdown-toggle">
-                <span data-translate="navFlashcards">Flashcards</span>
-                <i class="fas fa-chevron-down"></i>
-            </div>
-            <div class="dropdown-menu">
-                <a href="my-decks.html" class="dropdown-item">
-                    <i class="fas fa-layer-group"></i>
-                    <span data-translate="navMyDecks">Meus Decks</span>
-                </a>
-                <a href="community.html" class="dropdown-item">
-                    <i class="fas fa-users"></i>
-                    <span data-translate="navCommunity">Comunidade</span>
-                </a>
-                <a href="create-deck.html" class="dropdown-item">
-                    <i class="fas fa-plus"></i>
-                    <span data-translate="navCreateDeck">Criar Deck</span>
-                </a>
-                <a href="statistics.html" class="dropdown-item">
-                    <i class="fas fa-history"></i>
-                    <span data-translate="navStatistics">Estatísticas</span>
-                </a>
-            </div>
-        </div>
+        <!-- Link para Flashcards -->
+        <a href="my-decks.html" data-translate="navFlashcards">Flashcards</a>
         
         <a href="community.html" data-translate="navCommunity">Comunidade</a>
     </div>
