--- a/dialogues.html
+++ b/dialogues.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/language-selector.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/dialogues.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/responsive.css">
     <script>
         // Definir a página atual para o destaque do menu
@@ -113,6 +114,6 @@
     <script src="js/navbar.js"></script>
     <script src="js/language-manager.js"></script>
     <script src="js/native-language.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/dialogues.js"></script>
 </body>
 </html>
