Ajustes finos no navbar e avatar

--- a/navbar.html
+++ b/navbar.html
@@ -142,7 +142,7 @@
         
         <!-- Usuário com menu dropdown (agora inclui o botão Sair) -->
         <div class="user-menu">
-            <div class="user-avatar">U</div>
+            <div class="user-avatar"></div>
             <div class="user-dropdown-menu">
                 <div class="user-dropdown-item" onclick="viewProfile()">
                     <i class="fas fa-user"></i>
