--- a/dialogues.html
+++ b/dialogues.html
@@ -110,7 +110,9 @@
         }, 100);
     });
     </script>
+    <script src="js/data.js"></script>
     <script src="js/geo-ip-detector.js"></script>
+    <script src="js/user-avatar.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/language-manager.js"></script>
     <script src="js/native-language.js"></script>
