--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <title>Lingua Nova | Aprenda Idiomas</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/language-selector.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <script>
+        // Definir a página atual para o destaque do menu
+        window.currentPage = 'index.html';
+    </script>
 </head>
 <body>
     <div id="navbar-container"></div>
