implmentação dos flashcards

--- a/navbar.html
+++ b/navbar.html
@@ -9,8 +9,35 @@
         <a href="dialogues.html" data-translate="navDialogues">Diálogos</a>
         <a href="stories.html" data-translate="navStories">Histórias</a>
         
-        <!-- Link para Flashcards -->
-        <a href="my-decks.html" data-translate="navFlashcards">Flashcards</a>
+        <!-- Dropdown para Flashcards -->
+        <div class="dropdown" id="flashcards-dropdown">
+            <div class="dropdown-toggle" data-translate="navFlashcards">
+                <span>Flashcards</span>
+                <i class="fas fa-chevron-down dropdown-icon"></i>
+            </div>
+            <div class="dropdown-menu">
+                <a href="my_decks.html" class="dropdown-item" data-translate="navMyDecks">
+                    <i class="fas fa-layer-group"></i>
+                    <span>My Decks</span>
+                </a>
+                <a href="new_deck.html" class="dropdown-item" data-translate="navNewDeck">
+                    <i class="fas fa-plus-circle"></i>
+                    <span>New Deck</span>
+                </a>
+                <a href="add_cards.html" class="dropdown-item" data-translate="navAddCards">
+                    <i class="fas fa-plus"></i>
+                    <span>Add Cards</span>
+                </a>
+                <a href="study.html" class="dropdown-item" data-translate="navStudy">
+                    <i class="fas fa-graduation-cap"></i>
+                    <span>Study</span>
+                </a>
+                <a href="import.html" class="dropdown-item" data-translate="navImport">
+                    <i class="fas fa-file-import"></i>
+                    <span>Import</span>
+                </a>
+            </div>
+        </div>
         
         <a href="community.html" data-translate="navCommunity">Comunidade</a>
     </div>
