--- a/add_cards.html
+++ b/add_cards.html
@@ -25,7 +25,7 @@
     <div class="content-below-navbar">
         <!-- Page Header -->
         <div class="page-header">
-            <h1 class="page-title" data-translate="addCards">
+            <h1 class="page-title" data-translate="addCardsTitle">
                 <i class="fas fa-plus-circle"></i>
                 Adicionar Cartões
             </h1>
@@ -47,7 +47,7 @@
                     </p>
                     <a href="new_deck.html" class="btn btn-primary" data-action="create-deck">
                         <i class="fas fa-plus"></i>
-                        <span data-translate="createDeck">Criar Deck</span>
+                        <span data-translate="create">Criar</span>
                     </a>
                 </div>
 
@@ -107,5 +107,6 @@
     <script src="js/language-manager.js"></script>
     <script src="js/native-language.js"></script>
     <script src="js/add_cards.js"></script>
+
 </body>
 </html>
